@@ -6114,6 +6114,24 @@ sub urandomm {
   return $r % $n;
 }
 
+sub random_ndigit_prime {
+  my($digits) = @_;
+  _validate_positive_integer($digits, 1);
+  if ($Math::Prime::Util::_GMPfunc{"random_ndigit_prime"}) {
+    return Math::Prime::Util::_reftyped($_[0], Math::Prime::Util::GMP::random_ndigit_prime($digits));
+  }
+  require Math::Prime::Util::RandomPrimes;
+  return Math::Prime::Util::RandomPrimes::random_ndigit_prime($digits);
+}
+sub random_nbit_prime {
+  my($bits) = @_;
+  _validate_positive_integer($bits, 2);
+  if ($Math::Prime::Util::_GMPfunc{"random_nbit_prime"}) {
+    return Math::Prime::Util::_reftyped($_[0], Math::Prime::Util::GMP::random_nbit_prime($bits));
+  }
+  require Math::Prime::Util::RandomPrimes;
+  return Math::Prime::Util::RandomPrimes::random_nbit_prime($bits);
+}
 
 
 1;
