@@ -1,0 +1,9 @@
+#ifndef MPU_RANDOM_PRIME_H
+#define MPU_RANDOM_PRIME_H
+
+#include "ptypes.h"
+
+extern UV random_nbit_prime(UV b);
+extern UV random_ndigit_prime(UV d);
+
+#endif
